Version 0.5.1
Update of datatabaseRequired

Added comment field for InstitutionTerritory. 